Fix dropdown overlapping error

--- a/intranet/static/css/eighth.schedule.css
+++ b/intranet/static/css/eighth.schedule.css
@@ -54,8 +54,9 @@ table.schedule-activity-grid thead th.special > span {
         /* remove gap between top header and primary-content */
         margin-top: -16px;
         padding-top: 16px;
+		padding-right:152px;
         background-color: #F2F2F4;
-        z-index: 4;
+        z-index: 2;
         border-bottom: 1px rgb(194, 194, 194) solid;
     }
 
@@ -63,7 +64,7 @@ table.schedule-activity-grid thead th.special > span {
         position: fixed;
         margin-top: 42px;
         width: 100%;
-        z-index: 4;
+        z-index: 2;
     }
 
     .schedule-activity-page.floating .schedule-activity-grid {
@@ -111,7 +112,7 @@ tr.form-row.hidden .selectize-input {
     top: 100px;
     width: 220px;
     line-height: 40px;
-    z-index: 999;
+    z-index: 998;
 }
 
 .propagate-direction > b {
